import EventEmitter from 'external/EventEmitter';


export default class Card extends EventEmitter {
    constructor() {
        super();
    }


}
