import EventEmitter from 'external/EventEmitter';


export default class CardRowViewManager extends EventEmitter {
    constructor() {
        super();

    }
}
