import CardManager from './../CardManager';


export default class Deck extends CardManager {
    constructor() {
        super();

    }
}
