import CardManager from './../CardManager';


export default class Graveyard extends CardManager {
    constructor() {
        super();

    }
}
