import CardManager from './../CardManager';


export default class Table extends CardManager {
    constructor() {
        super();

    }
}
