class CreatureCardView {

}
