@startuml

skinparam class {
	ArrowColor black
	BorderColor black
}

skinparam stereotypeCBackgroundColor YellowGreen
skinparam shadowing false


class CardField
CardField --> Hand
CardField --> Table
CardField --> Deck
CardField --> Graveyard

abstract CardView

abstract CardManager

abstract CardRowViewManager

abstract StackCardViewManager


class Card
Card --> CardView


class CreatureCardView
CardView <|-- CreatureCardView


class AreaCardView
CardView <|-- AreaCardView


class Hand
Hand <|-- CardManager
Hand --> HandView
HandView --> Card
CardRowViewManager <|-- HandView


class Table
Table <|-- CardManager
Table --> TableView
TableView --> Card
CardRowViewManager <|-- TableView

class Graveyard
Graveyard <|-- CardManager
Graveyard --> GraveyardView
GraveyardView --> Card
StackCardViewManager <|-- GraveyardView


class Deck
Deck <|-- CardManager
Deck  --> DeckView
DeckView --> Card
StackCardViewManager <|-- DeckView


@enduml
